syntax = "proto3";

package AuthApi;

option csharp_namespace = "AuthApi";

service AuthService {
  rpc RegistrationUser (RegistrationRequest) returns (RegistrationResponse);
  rpc AuthorizationUser (AuthorizationRequest) returns (AuthorizationResponse);
}

message User {
  int32 id = 1;
  string username = 2;
  string password = 3;
}

message RegistrationRequest {
  string username = 1;
  string password = 2;
}

message RegistrationResponse {
  string message = 1;
}

message AuthorizationRequest {
  string username = 1;
  string password = 2;
  bool rememberMe = 3;
}

message AuthorizationResponse {
  string token = 1;
  string message = 2;
  bool IsAuthenticated = 3;
}